<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ComicDroid</string>
    <string name="title_activity_start">ComicDroid</string>
    <string name="title_activity_add">Add</string>
    <string name="title_activity_comic_view"></string>
    <string name="title_activity_authors"></string>
    <string name="title_activity_edit">Edit</string>
    <string name="title_activity_comics"></string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_watched_groups"></string>
    <string name="title_activity_borrow">Lend Out</string>
    <string name="title_activity_borrowed">On loan</string>    
    <string name="menu_start">The Archive</string>
    <string name="menu_start_sub">Browse your comics</string>
    <string name="menu_add">Add</string>
    <string name="menu_add_sub">Scan and add new comics</string>
    <string name="menu_add_short">New</string>
    <string name="menu_borrow">Lend Out</string>
    <string name="menu_borrow_sub">Mark comics as on loan</string>
    <string name="menu_borrowed">On Loan</string>
    <string name="menu_borrowed_sub">See which comics are lent out</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_settings_sub">Miscellaneous settings for ComicDroid</string>
    <string name="menu_watched">Watched</string>
    <string name="menu_watched_sub">See which collections are being watched</string>
    <string name="menu_read">To Read</string>
    <string name="menu_read_sub">Show all comics marked as not read</string>
    <string name="menu_returncomic">Returned</string>
    <string name="menu_editall">Edit all</string>
    <string name="common_addtogroup">Add added comics to collection:</string>
    <string name="common_search">Search</string>
    <string name="common_group">Collection</string>
    <string name="common_nogroup">No collection</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_save">Save</string>
    <string name="common_edit">Edit</string>
    <string name="common_delete">Delete</string>
    <string name="common_sort">Sort</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_name">Name</string>
    <string name="common_none">None</string>
    <string name="common_close">Close</string>
    <string name="start_tab_aggregates">Comics</string>
    <string name="start_tab_comics">Titles</string>
    <string name="start_tab_authors">Authors</string>
    <string name="start_tab_illustrators">Illustrators</string>
    <string name="start_tab_publishers">Publishers</string>
    <string name="add_btnscan">Scan ISBN</string>
    <string name="add_btnadd">Create</string>
    <string name="add_search_notfound">Sorry, could not find the book</string>
    <string name="add_search_invalidisbn">Invalid ISBN</string>
    <string name="add_search_isduplicate">Book has already been added</string>
    <string name="add_isread">Mark added comics as read</string>
    <string name="add_success">Found and archived comic</string>
    <string name="edit_listhandle">Comics being edited</string>
    <string name="edit_done">Saved and done!</string>
    <string name="edit_needtosave">You need to save before you can add an image.</string>
    <string name="comicview_issueshort">Vol.</string>
    <string name="comicview_borrowed">On loan</string>
    <string name="comicview_delete_title">Delete comic?</string>
    <string name="comicview_delete_body">Do you really want to delete the comic?</string>
    <string name="dialog_groupadd_label">Name for collection:</string>
    <string name="dialog_groupadd_totalcount">Total number of comics in the collection</string>
    <string name="dialog_rename_label">Change name to:</string>
    <string name="comic_title">Title</string>
    <string name="comic_subtitle">Subtitle</string>
    <string name="comic_author">Author</string>
    <string name="comic_illustrator">Illustrator</string>
    <string name="comic_publisher">Publisher</string>
    <string name="comic_datepublished">Published</string>
    <string name="comic_dateadded">Added</string>
    <string name="comic_pagecount">Number of pages</string>
    <string name="comic_issue">Volume</string>
    <string name="comic_isread">Read</string>
    <string name="comic_issues">Collects the following</string>
    <string name="borrow_etBorrower">On loan to..</string>
    <string name="borrow_btnClear">Clear</string>
    <string name="borrow_notadded">Could not find requested book</string>
    <string name="borrow_added">Comic has been marked as on loan</string>
    <string name="dialog_group_create">Save collection</string>
    <string name="borrowed_empty">Nothing is on loan. Get some reading done..</string>
    <string name="settings_heading">Settings</string>
    <string name="settings_actions">Actions</string>
    <string name="settings_drivelabel">Publish on drive</string>
    <string name="settings_drivesub">Make your archive public by publishing an HTML-page on your google drive account.</string>
    <string name="settings_publishlabel">Publish now</string>
    <string name="settings_publishsub">If google drive isn\'t up to date you can publish now. You need to have publishing enabled above.</string>
    <string name="settings_backupwifilabel">Wifi only</string>
    <string name="settings_backupwifisub">Only perform backups when connected to wifi</string>
    <string name="settings_btnPublish">Publish now</string>
    <string name="settings_readlabel">Mark as read</string>
    <string name="settings_readsub">Press the button below to mark all comics as read.</string>
    <string name="settings_btnRead">Mark all as read</string>    
    <string name="settings_readconfirm">Do you really want to mark all comics as read?</string>
    <string name="settings_groupcountlabel">Update collections</string>
    <string name="settings_groupcountsub">If the number of comics for collections are incorrect you can fix it by pressing the button below.</string>
    <string name="settings_btnGroupCount">Update collection count</string>        
    <string name="settings_restorelabel">Restore data</string>
    <string name="settings_restoresub">Tries to restore data from google backup. THIS WILL DELETE EVERYTHING!</string>
    <string name="settings_btnRestore">Restore from google backup</string>    
    <string name="settings_linktext">View archive on google drive</string>
    <string name="settings_updateGroupCount_notification">Collection counts have been updated</string>
    <string name="settings_restoresuccess">Data has been restored successfully</string>
    <string name="settings_restoreerror">Data could not be restored!</string>
    <string name="settings_drivebackuplabel">Backup to drive</string>
    <string name="settings_drivebackupsub">Enable this to backup ComicDroid to your google drive account</string>
    <string name="settings_forcebackup">Enable backup</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="group_delete_title">Delete collection?</string>
    <string name="group_delete_alt">Also delete all comics in the collection!</string>
    <string name="sort_title">Title</string>
    <string name="sort_added">Added</string>
    <string name="error_webfoldercreate">Unable to create files on google drive</string>
    <string name="error_storeimage">Unable to save image</string>
    <string name="group_watched">Watch</string>
    <string name="group_finished">Finished</string>
    <string name="group_complete">Complete</string>
    <string name="action_settings">Settings</string>
    <string name="watched_empty">You are not watching any collections for now</string>
    <string name="sort_rating">Rating</string>
    <string name="comics_heading_read">To Read</string>
    <string name="watched_heading">Watched collections</string>
    <string name="archive_empty">You haven\'t added any comics yet. Pull in the menu from the left and choose "Add"</string>
    <string name="nUploaderrorheading">ComicDroid couldn\'t publish on google drive</string>
    <string name="nUploaderrorsub">Click here to enable publishing again</string>
    <string name="error_driveappdataaccess">Unable to access google drive</string>
    <string name="error_backupdisallowed">Found existing backup. If this is the only device running ComicDroid you can safely enable backup, otherwise just close.</string>
    <string name="error_webfolderexists">ComicDroid-folder already exists on drive. Maybe another device is publishing, otherwise delete "ComicDroid"-folder from google drive</string>
    <string name="progress_restorecomics">Restoring comics</string>
    <string name="progress_restoreimages">Restoring images</string>
    <string name="progress_init">Starting restore</string>
    <string name="progress_publishinit">Starting publishing</string>
    <string name="progress_publish">Formating comics</string>
    <string name="progress_publishupload">Uploading to drive</string>
</resources>